userinterface is nun SceneManager, logik aus view ebene entfernt